--- a/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/web.xml
+++ b/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             WEB-INF/dispatcher-servlet.xml,
+            WEB-INF/spring-security.xml
         </param-value>
     </context-param>
 
@@ -25,7 +26,20 @@
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy
         </filter-class>
     </filter>
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>by.training.nc.dev5.web.filter.EncodingFilter
+        </filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
 
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>jpaFilter</filter-name>
         <url-pattern>*</url-pattern>
