--- a/MK-WebApp-Library-Spring4/pom.xml
+++ b/MK-WebApp-Library-Spring4/pom.xml
@@ -45,6 +45,17 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>4.3.8.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>4.3.8.RELEASE</version>
+    </dependency>
 
     <!--Spring Security-->
     <dependency>
